<resources>
    <string name="app_name">King Cabs</string>
    <string name="title_home">Home</string>
    <string name="title_call">Call</string>
    <string name="title_register">Registration</string>
    <string name="title_logout">Logout</string>
    <string name="title_notification">Notification</string>
    <string name="title_insurance">Insurance</string>
    <string name="title_settings">Settings</string>
    <string name="title_payment">Payments</string>
    <string name="title_support">Support</string>
    <string name="title_services">Other Services</string>
    <string name="title_refer">Refer Us</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="spinnerhint"><font color="#000000" size="14">Select User Type</font></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBwRgcHISZ6_GhPaMUuOjGQ9QqfghTd5Es</string>
</resources>
