<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications"
        android:title="@string/title_notification" />
    <item
        android:id="@+id/navigation_insurance"
        android:icon="@drawable/shield"
        android:title="@string/title_insurance" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />
    <item
        android:id="@+id/navigation_payment"
        android:icon="@drawable/ic_payment"
        android:title="@string/title_payment" />
    <item
        android:id="@+id/navigation_support"
        android:icon="@drawable/ic_support"
        android:title="@string/title_support" />
    <item
        android:id="@+id/navigation_services"
        android:icon="@drawable/ic_service"
        android:title="@string/title_services" />
    <item
        android:id="@+id/navigation_refer"
        android:icon="@drawable/ic_refer"
        android:title="@string/title_refer" />
    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_logout"
        android:layout_gravity="bottom"
        android:title="@string/title_logout" />
</menu>
